# csl-serialization-benchmark

./: .gitignore  LICENSE  README.md  bin-bench.cabal  stack.yaml
app/: Cbor.hs  Coin.hs  Main.hs  Store.hs  Types.hs
